Thu Oct 10 10:53:28 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* peropen-rele.c (diskfs_release_peropen): Before freeing PO,
 	release any user lock it's holding.
	<sys/file.h>: New include.
	
Tue Oct  8 15:01:32 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* ifsock.c (diskfs_S_ifsock_getsockaddr): Write permission governs
	access to sockets, not read permission.

Mon Oct  7 14:50:04 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* dir-rmdir.c (diskfs_S_dir_rmdir): Return ENOTDIR if NP isn't a dir.

Tue Sep 24 23:51:37 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* opts-version.c (_print_version): Follow version string with newline.

Thu Sep 19 17:59:37 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): Add store.

Wed Sep 18 15:02:31 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* opts-version.c (_print_version): Change to use new version
	format from the coding standards.

	* opts-std-runtime.c (std_runtime_options): Change --remount to
	--update (keep --remount as a deprecated alias).
	<argp.h>: New include.
	* opts-append-std.c <stdio.h>: New include.
	* dir-lookup.c <stdio.h>: New include.
	
Fri Sep 13 19:15:45 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* file-get-fs-opts.c (diskfs_S_file_get_fs_options): Free ARGZ if
	diskfs_append_args returns an error.
	* fsys-options.c (diskfs_S_fsys_get_options): Likewise.

1996-09-12  Miles Bader  <miles@gnu.ai.mit.edu>

	* diskfs.h (diskfs_disk_name): New declaration.
	* readonly.c (diskfs_check_readonly): Use DISKFS_DISK_NAME
	instead of DISKFS_DEVICE_ARG.
	* init-startup.c (_diskfs_init_completed): Likewise.

Wed Sep 11 17:25:14 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* disk-pager.c (diskfs_start_disk_pager): Renamed from
	setup_disk_pager.
	Add PAGER_BUCKET, IMAGE, and SIZE arguments.
	Pass in PAGER_BUCKET to thread routine, and don't create it.
	(diskfs_disk_pager): Renamed from disk_pager.
	(disk_image): Variable removed.
	(pager_bucket): Declaration removed.